--- a/David Filo/index.html
+++ b/David Filo/index.html
@@ -16,8 +16,8 @@
         </button>
         <h1>David Filo</h1>
         <div class="ibnt">
-            <div>
-                <img src="../Imagens/Davidinho.png" class="whiteborder moveleft" style="width: 244px;">
+            <div style="width: 300px">
+                <img src="../Imagens/Davidinho.png" class="whiteborder moveleft" style="width: 100%;">
             </div>
             <div style="width: 244px; align-content: space-around;">
                 <p class="moveright ibnt">Nacionalidade: <a href="https://pt.wikipedia.org/wiki/Estados_Unidos">EUA</a>🇺🇸</p>
