--- a/Jerry Yang/index.html
+++ b/Jerry Yang/index.html
@@ -15,8 +15,8 @@
         </button>
         <h1 class="center">Jerry Yang</h1>
         <div class="ibnt">
-            <div>
-                <img src="../Imagens/Jerrinho.png" class="whiteborder moveleft" style="width: 300px;">
+            <div style="width: 300px">
+                <img src="../Imagens/Jerrinho.png" class="whiteborder moveleft" style="width: 100%;">
             </div>
             <div style="width: 300px; align-content: space-around;">
                 <p class="moveright ibnt">Nacionalidade: <a href="https://pt.wikipedia.org/wiki/Taiwan">Taiwan</a> 🇹🇼</p>
