--- a/Yahoo/index.html
+++ b/Yahoo/index.html
@@ -17,8 +17,8 @@
         <!--História do Yahoo-->
         <h1>Yahoo</h1>
         <div class="ibnt">
-            <div>
-                <img src="../Imagens/Yahooinho.png" class="whiteborder moveleft" style="width: 400px;">
+            <div style="width: 400px;">
+                <img src="../Imagens/Yahooinho.png" class="whiteborder moveleft" style="width: 100%;">
             </div>
             <div style="width: 400px; align-content: space-around;">
                 <p class="moveright ibnt">Fundação: Janeiro de 1994</p>
